[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "digitalmarketplace-developer-tools"
dynamic = ["version"]
dependencies = [
  "colored>=2",
  "invoke>=2",
]
requires-python = ">=3.9,<3.14"
authors = [
  {name = "GDS Developers"},
  {name = "CCS Developers"},
]
description = "Common developer tools for Digital Marketplace repos"
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/Crown-Commercial-Service/digitalmarketplace-developer-tools"
Repository = "https://github.com/Crown-Commercial-Service/digitalmarketplace-developer-tools.git"
Issues = "https://github.com/Crown-Commercial-Service/digitalmarketplace-developer-tools/issues"
